update navbar, logo

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -2,7 +2,8 @@
   "Navbar": {
     "home": "Home",
     "explore": "Explore Courses",
-    "teach": "Become an Instructor"
+    "teach": "Become an Instructor",
+    "detail":"Detail"
   },
   "Topic": {
     "category_health": "Health",
