--- a/src/i18n/messages/vi.json
+++ b/src/i18n/messages/vi.json
@@ -2,7 +2,8 @@
   "Navbar": {
     "home": "Trang chủ",
     "explore": "Khám phá khóa học",
-    "teach": "Trở thành giảng viên"
+    "teach": "Trở thành giảng viên",
+    "detail":"Chi Tiết"
   },
   "Topic": {
     "category_health": "Sức khoẻ",
