Fix UI/UX Error: Giấu navbar khi đăng nhập/đăng ký
Update: Thêm 'logout' vào thư mục json i8n

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -4,7 +4,8 @@
     "explore": "Explore Courses",
     "teach": "Become an Instructor",
     "detail":"Detail",
-    "login": "Login"
+    "login": "Login",
+    "logout":"Logout"
   },
   "Topic": {
     "category_health": "Health",
