New Feature & UI: Trang đăng ký giảng viên và chức năng đăng ký giảng viên

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -2,10 +2,10 @@
   "Navbar": {
     "home": "Home",
     "explore": "Explore Courses",
-    "teach": "Become an Instructor",
+    "instructor": "Become an Instructor",
     "detail":"Learning Space",
     "login": "Login",
-     "logout":"Logout"
+    "logout":"Logout"
   },
   "Topic": {
     "category_health": "Health",
