New UI & Feature & Update UI: [ADMIN] Trang quản lý người dùng (Xem chi tiết/Sửa thông tin), Trang quản lý giảng viên (thêm nút reload), Trang quản lý danh mục (Thêm/Xoá), Trang edit khoá học (Update UX)

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -5,7 +5,8 @@
     "instructor": "Become an Instructor",
     "detail":"Learning Space",
     "login": "Login",
-    "logout":"Logout"
+    "logout":"Logout",
+    "admin":"Admin"
   },
   "Topic": {
     "category_health": "Health",
