chỉnh course của giảng viên

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -2,7 +2,8 @@
   "Navbar": {
     "home": "Home",
     "explore": "Explore Courses",
-    "instructor": "Become an Instructor",
+    "become-lecturer": "Become an Instructor",
+    "instructor": "Instructor Area",
     "detail":"Learning Space",
     "login": "Login",
     "logout":"Logout",
