New Feature: Học tập theo combo
BUILT

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -26,6 +26,7 @@
   },
   "Course-Detail-Tab": {
     "overview":"Overview",
+    "curriculum-combo":"Content",
     "curriculum":"Curriculum",
     "instructor":"Instructor",
     "reviews":"Reviews"
